--- a/CursoUdemy/Views/Shared/_Layout.cshtml
+++ b/CursoUdemy/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 @Html.ActionLink("Clientes", "Index", "Cliente", new { area = "" }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Empleado", "Index", "Empleado", new { area = "" }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Bus", "Index", "Bus", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Viaje", "Index", "Viaje", new { area = "" }, new { @class = "navbar-brand" })
 
             </div>
             <div class="navbar-collapse collapse">
