--- a/CursoUdemy/Views/Empleado/Index.cshtml
+++ b/CursoUdemy/Views/Empleado/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h2>Index</h2>
+@Html.ActionLink("Agregar", "Agregar", "Empleado", null, new { @class = "btn btn-primary" })
 
 <table class="table table-bordered table-hover">
     <thead>
@@ -18,15 +19,15 @@
         </tr>
     </thead>
     <tbody>
-        @foreach(var item in Model)
+        @foreach (var item in Model)
         {
-        <tr>
-            <td>@item.iidEmpleado</td>
-            <td>@item.nombre</td>
-            <td>@item.apPaterno</td>
-            <td>@item.nombreTipoUsuario</td>
-            <td>@item.nombreTipoContrato</td>
-        </tr>
+            <tr>
+                <td>@item.iidEmpleado</td>
+                <td>@item.nombre</td>
+                <td>@item.apPaterno</td>
+                <td>@item.nombreTipoUsuario</td>
+                <td>@item.nombreTipoContrato</td>
+            </tr>
         }
     </tbody>
 
