Vista de agregar Empleado

--- a/CursoUdemy/Views/Empleado/Index.cshtml
+++ b/CursoUdemy/Views/Empleado/Index.cshtml
@@ -13,6 +13,7 @@
             <td>@Html.LabelFor(p => Model[0].iidEmpleado)</td>
             <td>@Html.LabelFor(p => Model[0].nombre)</td>
             <td>@Html.LabelFor(p => Model[0].apPaterno)</td>
+            <td>@Html.LabelFor(p => Model[0].apMaterno)</td>
             <td>@Html.LabelFor(p => Model[0].nombreTipoUsuario)</td>
             <td>@Html.LabelFor(p => Model[0].nombreTipoContrato)</td>
 
@@ -25,6 +26,7 @@
                 <td>@item.iidEmpleado</td>
                 <td>@item.nombre</td>
                 <td>@item.apPaterno</td>
+                <td>@item.apMaterno</td>
                 <td>@item.nombreTipoUsuario</td>
                 <td>@item.nombreTipoContrato</td>
             </tr>
