--- a/CursoUdemy/Views/Empleado/Agregar.cshtml
+++ b/CursoUdemy/Views/Empleado/Agregar.cshtml
@@ -8,13 +8,62 @@
 }
 
 <h2>Agregar</h2>
+<div class="row">
+    <div class="col-md-6">
+        @using (Html.BeginForm("Agregar", "Empleado", FormMethod.Post))
+        {
+            <div>
+                @Html.LabelFor(p => p.nombre)
+                @Html.TextBoxFor(p => p.nombre, new { @class = "form-control" })
+                @Html.ValidationMessage("nombre", new { @class = "text-danger" })
+            </div>
 
-@using (Html.BeginForm("Agregar", "Empleado", FormMethod.Post))
-{
+            <div>
+                @Html.LabelFor(p => p.apPaterno)
+                @Html.TextBoxFor(p => p.apPaterno, new { @class = "form-control" })
+                @Html.ValidationMessage("apPaterno", new { @class = "text-danger" })
+            </div>
 
+            <div>
+                @Html.LabelFor(p => p.apMaterno)
+                @Html.TextBoxFor(p => p.apMaterno, new { @class = "form-control" })
+                @Html.ValidationMessage("apMaterno", new { @class = "text-danger" })
+            </div>
 
+            <div>
+                @Html.LabelFor(p => p.fechaContrato)
+                @Html.EditorFor(p => p.fechaContrato, new { HtmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessage("fechaContrato", new { @class = "text-danger" })
+            </div>
 
+            <div>
+                @Html.LabelFor(p=>p.sueldo)
+                @Html.TextBoxFor(p => p.sueldo, new { @class = "form-control" })
+                @Html.ValidationMessage("sueldo", new { @class = "text-danger" })
+            </div>
 
-    
-}
+            <div>
+                @Html.LabelFor(p => p.iidtipoUsuario)
+                @Html.DropDownList("iidtipoUsuario", listaTipoUsuario, null, new { @class = "form-control" })
+                @Html.ValidationMessage("iidtipoUsuario", new { @class = "text-danger" })
+            </div>
 
+            <div>
+                @Html.LabelFor(p => p.iidtipoContrato)
+                @Html.DropDownList("iidtipoContrato", listaTipoContrato, null, new { @class = "form-control" })
+                @Html.ValidationMessage("iidtipoContrato", new { @class = "text-danger" })
+            </div>
+
+            <div>
+                @Html.LabelFor(p => p.iidSexo)
+                @Html.DropDownList("iidSexo", listaSexo, null, new { @class = "form-control" })
+                @Html.ValidationMessage("iidSexo", new { @class = "text-danger" })
+            </div>
+
+            <input type="submit" value="Enviar" class="btn btn-primary" />
+
+        }
+
+    </div>
+
+</div>
