--- a/CursoUdemy/Views/Sucursal/Editar.cshtml
+++ b/CursoUdemy/Views/Sucursal/Editar.cshtml
@@ -1,15 +1,21 @@
 ﻿@using CursoUdemy.Models;
 @model SucursalCLS
 @{
-    ViewBag.Title = "Agregar";
+    ViewBag.Title = "Editar";
 }
 
-<h2>Agregar</h2>
-
+<h2>Editar</h2>
 <div class="row">
     <div class="col-md-6">
-        @using (Html.BeginForm("Agregar", "Sucursal", FormMethod.Post))
+        @using (Html.BeginForm("Editar", "Sucursal", FormMethod.Post))
         {
+
+            <div>
+                @Html.LabelFor(p => p.iidsucursal)
+                @Html.TextBoxFor(p => p.iidsucursal, new { @class = "form-control", @readOnly=true })
+                @Html.ValidationMessage("iidsucursal", new { @class = "text-danger" })
+            </div>
+
             <div>
                 @Html.LabelFor(p => p.nombre)
                 @Html.TextBoxFor(p => p.nombre, new { @class = "form-control" })
@@ -36,8 +42,8 @@
 
             <div>
                 @Html.LabelFor(p => p.fechaApertura)
-                @Html.EditorFor(p => p.fechaApertura, new { htmlAttributes=new { @class = "form-control" } })
-                @Html.ValidationMessage("fechaApertura", new { @class = "text-danger"})
+                @Html.EditorFor(p => p.fechaApertura, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessage("fechaApertura", new { @class = "text-danger" })
             </div>
 
             <div>
@@ -49,4 +55,3 @@
         }
     </div>
 </div>
-
