Solo agregar text area en direccion-Cliente, nueva etiqueta en clienteCLS y Edidtorfor en agregar cliente.

--- a/CursoUdemy/Views/Cliente/Agregar.cshtml
+++ b/CursoUdemy/Views/Cliente/Agregar.cshtml
@@ -31,6 +31,12 @@
             </div>
 
             <div>
+                @Html.LabelFor(p => p.direccion)
+                @Html.EditorFor(p => p.direccion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessage("direccion", new { @class = "text-danger" })
+            </div>
+
+            <div>
                 @Html.LabelFor(p => p.email)
                 @Html.TextBoxFor(p => p.email, new { @class = "form-control" })
                 @Html.ValidationMessage("email", new { @class = "text-danger" })
@@ -38,7 +44,7 @@
 
             <div>
                 @Html.LabelFor(p => p.iidsexo)
-                @Html.DropDownList("iidsexo", listaSexo,null,new { @class = "form-control" })
+                @Html.DropDownList("iidsexo", listaSexo, null, new { @class = "form-control" })
                 @Html.ValidationMessage("iidsexo", new { @class = "text-danger" })
             </div>
 
