--- a/CursoUdemy/Views/Empleado/Index.cshtml
+++ b/CursoUdemy/Views/Empleado/Index.cshtml
@@ -16,20 +16,26 @@
             <td>@Html.LabelFor(p => Model[0].apMaterno)</td>
             <td>@Html.LabelFor(p => Model[0].nombreTipoUsuario)</td>
             <td>@Html.LabelFor(p => Model[0].nombreTipoContrato)</td>
+            <td>Operaciones</td>
 
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>@item.iidEmpleado</td>
-                <td>@item.nombre</td>
-                <td>@item.apPaterno</td>
-                <td>@item.apMaterno</td>
-                <td>@item.nombreTipoUsuario</td>
-                <td>@item.nombreTipoContrato</td>
-            </tr>
+        <tr>
+            <td>@item.iidEmpleado</td>
+            <td>@item.nombre</td>
+            <td>@item.apPaterno</td>
+            <td>@item.apMaterno</td>
+            <td>@item.nombreTipoUsuario</td>
+            <td>@item.nombreTipoContrato</td>
+            <td>
+                @Html.ActionLink(" ", "Editar", "Empleado", new { id = @item.iidEmpleado }, new { @class = "glyphicon glyphicon-edit btn btn-primary" })
+                @Html.ActionLink(" ", "Eliminar", "Empleado", new { id = @item.iidEmpleado }, new { @class = "glyphicon glyphicon-trash btn btn-danger" })
+
+            </td>
+        </tr>
         }
     </tbody>
 
