Agregar con Scalfolding de MVC en Bus y metodos listar y HttpPost en Bus controller.

--- a/CursoUdemy/Views/Bus/Index.cshtml
+++ b/CursoUdemy/Views/Bus/Index.cshtml
@@ -6,6 +6,7 @@
 
 <h2>Index</h2>
 
+@Html.ActionLink("Agregar", "Agregar", "Bus", new { @class = "btn btn-primary" })
 
 <table class="table table-bordered table-hover">
 
@@ -27,6 +28,5 @@
 
 </tr>
     }
-
 
 </table>
