--- a/CursoUdemy/Views/Bus/Index.cshtml
+++ b/CursoUdemy/Views/Bus/Index.cshtml
@@ -11,20 +11,26 @@
 <table class="table table-bordered table-hover">
 
     <tr>
-        <td>@Html.LabelFor(p=>Model[0].iidBus)</td>
+        <td>@Html.LabelFor(p => Model[0].iidBus)</td>
         <td>@Html.LabelFor(p => Model[0].placa)</td>
         <td>@Html.LabelFor(p => Model[0].nombreModelo)</td>
         <td>@Html.LabelFor(p => Model[0].nombreSucursal)</td>
         <td>@Html.LabelFor(p => Model[0].nombreTipoBus)</td>
+        <td>Operaciones</td>
     </tr>
 
     @foreach (var item in Model) {
 <tr>
-    <td>@item.iidTipoBus</td>
+    <td>@item.iidBus</td>
     <td>@item.placa</td>
     <td>@item.nombreModelo</td>
     <td>@item.nombreSucursal</td>
     <td>@item.nombreTipoBus</td>
+    <td>
+        @Html.ActionLink(" ", "Editar", "Bus", new { id = @item.iidBus }, new { @class = "glyphicon glyphicon-edit btn btn-primary" })
+        @Html.ActionLink(" ", "Eliminar", "Bus", new { id = @item.iidBus }, new { @class = "glyphicon glyphicon-trash btn btn-danger" })
+
+    </td>
 
 </tr>
     }
