--- a/CursoUdemy/Views/Marca/Editar.cshtml
+++ b/CursoUdemy/Views/Marca/Editar.cshtml
@@ -7,7 +7,7 @@
 <h2>Editar</h2>
 <div class="row">
     <div class="col-md-6">
-        @using (Html.BeginForm("Editar", "Marca", FormMethod.Post))
+        @using (Html.BeginForm("Editar", "Marca", FormMethod.Post, new { @id = "frmEditar" }))
         {
 
             <div>
@@ -30,9 +30,23 @@
             <br />
             <div style="margin:auto">
                 <input type="submit" class="btn btn-primary" value="Guardar" />
+                @Html.ActionLink("Regresar", "Index", "Marca", null, new { @class = "btn btn-danger" })
             </div>
-
 
         }
     </div>
 </div>
+
+<script>
+
+    var frmEditar = document.getElementById("frmEditar");
+    frmEditar.onsubmit = function (e) {
+        e.preventDefault();
+        if (confirm("Deseas guardar los cambios ?") == 1) {
+            frmEditar.submit();
+        }
+
+    }
+
+
+</script>
