--- a/CursoUdemy/Views/Marca/Agregar.cshtml
+++ b/CursoUdemy/Views/Marca/Agregar.cshtml
@@ -25,6 +25,7 @@
             <br/>
             <div style="margin:auto">
                 <input type="submit" class="btn btn-primary" value="Guardar" />
+                @Html.ActionLink("Regresar", "Index", "Marca", null, new { @class = "btn btn-danger" })
             </div>
 
 
