--- a/CursoUdemy/Views/Sucursal/Editar.cshtml
+++ b/CursoUdemy/Views/Sucursal/Editar.cshtml
@@ -7,7 +7,7 @@
 <h2>Editar</h2>
 <div class="row">
     <div class="col-md-6">
-        @using (Html.BeginForm("Editar", "Sucursal", FormMethod.Post))
+        @using (Html.BeginForm("Editar", "Sucursal", FormMethod.Post, new { @id = "frmSucursal" }))
         {
 
             <div>
@@ -49,9 +49,23 @@
             <div>
                 <div style="margin:auto">
                     <input type="submit" class="btn btn-primary" value="Guardar" />
+                    @Html.ActionLink("Regresar", "Index", "Sucursal", null, new { @class = "btn btn-danger" })
                 </div>
             </div>
 
         }
     </div>
 </div>
+
+<script>
+
+    var frmSucursal = document.getElementById("frmSucursal");
+    frmSucursal.onsubmit = function (e) {
+        e.preventDefault();
+        if (confirm("Desea guardar los cambios?") == 1) {
+            frmSucursal.submit();
+        }
+    }
+
+
+</script>
