Boton de regresar en agregar y editar cliente,  agregar modal de boostrap en agregar cliente. agregar evento de guardar en agregar sucursal

--- a/CursoUdemy/Views/Cliente/Agregar.cshtml
+++ b/CursoUdemy/Views/Cliente/Agregar.cshtml
@@ -2,7 +2,7 @@
 @model ClienteCLS
 @{
     ViewBag.Title = "Agregar";
-    List<SelectListItem> listaSexo = (List<SelectListItem>) ViewBag.lista;
+    List<SelectListItem> listaSexo = (List<SelectListItem>)ViewBag.lista;
 }
 
 <h2>Agregar</h2>
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col-md-6">
 
-        @using (Html.BeginForm("Agregar", "Cliente", FormMethod.Post))
+        @using (Html.BeginForm("Agregar", "Cliente", FormMethod.Post, new { @id = "frmCliente" })) 
         {
             <div>
                 @Html.LabelFor(p => p.nombre)
@@ -55,7 +55,11 @@
             </div>
 
             <div style="margin:auto">
-                <input type="submit" value="Enviar" class="btn btn-primary" />
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                    Guardar
+                </button>
+                @Html.ActionLink("Regresar", "Index", "Cliente", null, new { @class = "btn btn-danger" })
             </div>
         }
 
@@ -63,3 +67,35 @@
     </div>
 
 </div>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Desea guardar los cambios ?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <div style="padding:1em">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                <button type="button" onclick="Agregar()" class="btn btn-info">Aceptar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+
+    function Agregar() {
+        var frmCliente = document.getElementById("frmCliente");
+        frmCliente.submit();
+        
+
+    }
+
+</script>
