--- a/CursoUdemy/Views/Cliente/Editar.cshtml
+++ b/CursoUdemy/Views/Cliente/Editar.cshtml
@@ -63,6 +63,7 @@
 
             <div style="margin:auto">
                 <input type="submit" value="Enviar" class="btn btn-primary" />
+                @Html.ActionLink("Regresar", "Index", "Cliente", null, new { @class = "btn btn-danger" })
             </div>
         }
 
