Agregar HTTPPOST de editar cliente, agregar modal de validacion en editar cliente.

--- a/CursoUdemy/Views/Cliente/Agregar.cshtml
+++ b/CursoUdemy/Views/Cliente/Agregar.cshtml
@@ -82,8 +82,8 @@
             </div>
 
             <div style="padding:1em">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                <button type="button" onclick="Agregar()" class="btn btn-info">Aceptar</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+                <button type="button" onclick="Agregar()" class="btn btn-primary">Aceptar</button>
             </div>
         </div>
     </div>
