--- a/CursoUdemy/Views/Cliente/Editar.cshtml
+++ b/CursoUdemy/Views/Cliente/Editar.cshtml
@@ -10,12 +10,12 @@
 <div class="row">
     <div class="col-md-6">
 
-        @using (Html.BeginForm("Editar", "Cliente", FormMethod.Post))
+        @using (Html.BeginForm("Editar", "Cliente", FormMethod.Post, new { @id = "frmEditar" }))
         {
 
             <div>
                 @Html.LabelFor(p => p.iidcliente)
-                @Html.TextBoxFor(p => p.iidcliente, new { @class = "form-control" , readOnly=true})
+                @Html.TextBoxFor(p => p.iidcliente, new { @class = "form-control", readOnly = true })
                 @Html.ValidationMessage("iidcliente", new { @class = "text-danger" })
             </div>
 
@@ -62,7 +62,10 @@
             </div>
 
             <div style="margin:auto">
-                <input type="submit" value="Enviar" class="btn btn-primary" />
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                   Guardar
+                </button>
                 @Html.ActionLink("Regresar", "Index", "Cliente", null, new { @class = "btn btn-danger" })
             </div>
         }
@@ -71,3 +74,34 @@
     </div>
 
 </div>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Desea guardar los cambios ?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div style="padding:1em">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+                <button type="button" onclick="Agregar()" class="btn btn-primary">Aceptar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    function Agregar() {
+
+        var frmEditar = document.getElementById("frmEditar");
+        frmEditar.submit();
+        
+     }
+
+
+</script>
