Modal en Bus y Empleado, Editar en Bus y Empleado, con sus ActionResults.

--- a/CursoUdemy/Views/Bus/Agregar.cshtml
+++ b/CursoUdemy/Views/Bus/Agregar.cshtml
@@ -13,7 +13,7 @@
 <h2>Agregar</h2>
 <div class="row">
     <div class="col-md-6">
-        @using (Html.BeginForm("Agregar", "Bus", FormMethod.Post))
+        @using (Html.BeginForm("Agregar", "Bus", FormMethod.Post, new { @id = "frmBus" })) 
         {
             @Html.AntiForgeryToken()
 
@@ -25,7 +25,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.iidSucursal, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("iidSucursal", listaSucursal, null, new { @class = "form-control" } )
+                        @Html.DropDownList("iidSucursal", listaSucursal, null, new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.iidSucursal, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -33,7 +33,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.iidTipoBus, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("iidTipoBus", listaTipoBus, null, new { @class = "form-control" } )
+                        @Html.DropDownList("iidTipoBus", listaTipoBus, null, new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.iidTipoBus, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -105,7 +105,10 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Agregar" class="btn btn-primary" />
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                            Guardar
+                        </button>
+                        @Html.ActionLink("Regresar", "Index", "Bus", null, new { @class = "btn btn-danger" })
                     </div>
                 </div>
             </div>
@@ -113,6 +116,28 @@
     </div>
 </div>
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Desea guardar los cambios ?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <div style="padding:1em">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+                <button type="button" onclick="Agregar()" class="btn btn-primary">Aceptar</button>
+            </div>
+        </div>
+    </div>
 </div>
+
+<script>
+    function Agregar() {
+        var frmBus = document.getElementById("frmBus");
+        frmBus.submit();
+    }
+</script>
