--- a/CursoUdemy/Views/Empleado/Agregar.cshtml
+++ b/CursoUdemy/Views/Empleado/Agregar.cshtml
@@ -10,7 +10,7 @@
 <h2>Agregar</h2>
 <div class="row">
     <div class="col-md-6">
-        @using (Html.BeginForm("Agregar", "Empleado", FormMethod.Post))
+        @using (Html.BeginForm("Agregar", "Empleado", FormMethod.Post, new { @id = "frmEmpleado" }))
         {
             <div>
                 @Html.LabelFor(p => p.nombre)
@@ -37,7 +37,7 @@
             </div>
 
             <div>
-                @Html.LabelFor(p=>p.sueldo)
+                @Html.LabelFor(p => p.sueldo)
                 @Html.TextBoxFor(p => p.sueldo, new { @class = "form-control" })
                 @Html.ValidationMessage("sueldo", new { @class = "text-danger" })
             </div>
@@ -60,10 +60,44 @@
                 @Html.ValidationMessage("iidSexo", new { @class = "text-danger" })
             </div>
 
-            <input type="submit" value="Enviar" class="btn btn-primary" />
-
+            <div style="margin:auto">
+             <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                    Guardar
+                </button>
+                @Html.ActionLink("Regresar", "Index", "Empleado", null, new { @class = "btn btn-danger" })
+            </div>
         }
 
     </div>
 
 </div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Desea guardar los cambios ?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <div style="padding:1em">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+                <button type="button" onclick="Agregar()" class="btn btn-primary">Aceptar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+
+    function Agregar() {
+        var frmEmpleado = document.getElementById("frmEmpleado");
+        frmEmpleado.submit();
+    }
+
+</script>
