--- a/CursoUdemy/Views/Viaje/Index.cshtml
+++ b/CursoUdemy/Views/Viaje/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Index</h2>
-
+@Html.ActionLink("Agregar", "Agregar", "Viaje", null, new { @class = "btn btn-primary" })
 <table class="table table-hover table-bordered">
 
     <tr>
@@ -13,6 +13,7 @@
         <td>@Html.LabelFor(p => Model[0].nombreLugarOrigen)</td>
         <td>@Html.LabelFor(p => Model[0].nombreLugarDestino)</td>
         <td>@Html.LabelFor(p => Model[0].nombreBus)</td>
+        <td>Operaciones</td>
     </tr>
 
     @foreach (var item in Model)
@@ -22,6 +23,10 @@
             <td>@item.nombreLugarOrigen</td>
             <td>@item.nombreLugarDestino</td>
             <td>@item.nombreBus</td>
+            <td>
+                @Html.ActionLink(" ", "Editar", "Viaje", new { id = @item.iidViaje }, new { @class = "glyphicon glyphicon-edit btn btn-primary" })
+                @Html.ActionLink(" ", "Eliminar", "Viaje", new { id = @item.iidViaje }, new { @class = "glyphicon glyphicon-trash btn btn-danger" })
+            </td>
         </tr>
     }
 
